<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BHEL-Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_trial">trial</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_trial2">trial2</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_carriert">Carriert</string>
    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="last_update_time_label">Last location update time: </string>

    <string name="location_updated_message">Location updated</string>

</resources>