<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding">

    <EditText
        android:id="@+id/advice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="Enter Advice No"
        android:textColor="#009788"
        android:inputType="text"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        />

    <Button
        android:id="@+id/start_updates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startUpdatesButtonHandler"
        android:text="@string/start_updates"
        android:layout_below="@+id/advice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/stop_updates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="stopUpdatesButtonHandler"
        android:text="@string/stop_updates"
        android:layout_below="@+id/advice"
        android:layout_alignRight="@+id/advice"
        android:layout_alignEnd="@+id/advice" />

    <TextView
        android:id="@+id/latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:text="@string/latitude_label"
        android:textSize="@dimen/default_text_size"
        android:layout_below="@+id/start_updates_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/latitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/latitude_label"
        android:layout_marginLeft="@dimen/small_margin_left"
        android:layout_toRightOf="@+id/latitude_label"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude_label"
        android:textSize="@dimen/default_text_size"
        android:layout_below="@+id/latitude_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/longitude_label"
        android:layout_marginLeft="@dimen/small_margin_left"
        android:layout_toRightOf="@+id/longitude_label"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/last_update_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_update_time_label"
        android:textSize="@dimen/default_text_size"
        android:layout_below="@+id/longitude_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/last_update_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/last_update_time_label"
        android:layout_marginLeft="@dimen/small_margin_left"
        android:layout_toRightOf="@+id/last_update_time_label"
        android:textSize="@dimen/default_text_size" />


</RelativeLayout>